# lmx-os

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  db.py  logging_config.py  main.py  rate_limit.py  redis_client.py  secrets_provider.py  security.py
client-portal/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
demo/: README.md  epicor_sample_order.json  ids.py  seed_demo_data.py  send_demo_order.py
docs/: A10_1099_WORKER_AUTONOMY_RESEARCH.md  ARCHITECTURE.md  NEXT_STEPS.md  PAYROLL_STATE_OT_RESEARCH.md  ROADMAP.md
driver-app/: .gitignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
infra/: README.md
migrations/: env.py
scripts/: create_ops_user.py
tests/: conftest.py  test_api_auth.py  test_app_boot.py  test_batch_queue.py  test_client_auth.py  test_dispatch_event_wiring.py  test_driver_app_schemas.py  test_driver_auth.py  test_event_bus.py  test_fleet_state_and_hold_queue.py  test_gig_pricing.py  test_ingestion_adapters.py  test_learning_loop_detection.py  test_logging_config.py  test_ops_auth.py  test_optimizer_event_trigger.py  test_optimizer_google_client.py  test_optimizer_stub.py  test_overtime_rules.py  test_payroll_provider.py  test_photo_upload_client.py  test_push_client.py  test_secrets_provider.py  test_sla_engine.py  test_twilio_signature.py
(+254 files in other folders)
