[project]
name = "lmx-os"
version = "0.1.0"
description = "LMX OS - operational brain for LMX delivery hubs (Phase 1 core backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "geopy>=2.4.1",
    "tenacity>=8.3.0",
    "google-auth>=2.29.0",
    "requests>=2.31.0",  # transport dependency for google.auth.transport.requests token refresh
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "fakeredis>=2.23.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real Postgres + Redis (auto-skips if unreachable, see tests/integration/conftest.py)",
]
